on private rent

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="dv2"><p>Holiday <br> apartment/apartment</p></div>
                 <div class="dv3"><p>Holiday cabin</p></div>
                 <div class="dv4"><p>Villa</p></div>
-                <div class="dv5"><p>Villa</p></div>
+                <div class="dv51"><p>Villa</p></div>
             </div>
       </div>
     </section>
@@ -150,7 +150,7 @@
 
       <!-- Listing 3 -->
       <div class="listing">
-<img alt="Terrasse/Patio" class="uitk-image-media" src="https://images.trvl-media.com/lodging/34000000/33620000/33610300/33610284/df295816.jpg?impolicy=fcrop&amp;w=400&amp;h=267&amp;p=1&amp;q=high">        <div class="listing-details">
+   <img alt="Terrasse/Patio" class="uitk-image-media" src="https://images.trvl-media.com/lodging/34000000/33620000/33610300/33610284/df295816.jpg?impolicy=fcrop&amp;w=400&amp;h=267&amp;p=1&amp;q=high">        <div class="listing-details">
           <div class="rating-container">
             <span class="rating">8.8</span>
             <span class="rating-text">Excellent</span>
@@ -182,5 +182,120 @@
       </div>
     </div>
   </div>
+  <div class="the-2s">
+    <div class="circ">
+      <img alt="A two-storey house surrounded by green lawn and trees. In the background there is a lake and wooded hills." class="uitk-image-media" src="https://a.travel-assets.com/travel-assets-manager/3-18-25/uk-site-assets-editorial.jpg?impolicy=fcrop&amp;w=576&amp;h=324&amp;q=mediumHigh" loading="lazy" _mstalt="7877142" _msthash="1169">
+      <div class="prgphs">
+        <p>VOCATION RENTAL NEAR THE LAKE</p>
+        <p>Find Your vocation rental for summer by the water</p>
+      </div>
+    </div>
+    <div class="circ1">
+      <img alt="Stöbere in Ferienunterkünften mit Rabatt." class="uitk-image-media" src="https://a.travel-assets.com/travel-assets-manager/1-28-25/uk-site-assets-editorial-2.jpg?impolicy=fcrop&amp;w=576&amp;h=324&amp;q=mediumHigh" loading="lazy">
+      <div class="prgphs">
+        <p>CHEAP ACCOMMODATIONS</p>
+        <p>Find an entire vocation rental with</p>
+      </div>
+    </div>
+  </div>
+  <section class="beach-accommodations-section">
+  <div class="section-header">
+    <h2>Discover the perfect beach accommodation for you</h2>
+    <p class="section-dates">Offers for this period: <strong>Aug 9–Aug 13</strong></p>
+  </div>
+
+  <div class="accommodation-cards">
+    <div class="accommodation-card">
+      <img src="dubai.jpg" alt="Dubai apartment" />
+      <div class="accommodation-details">
+        <div class="rating-container">
+  <span class="rating high">9.4</span>
+  <span class="rating-text">Exceptional</span>
+  <span class="reviews">(109 reviews)</span>
+</div>
+
+        <h3>Beautiful apartment overlooking the sea in 5* residences all the comforts</h3>
+        <p class="location">Dubai, emirati arabi</p>
+        <p class="price">915 € <span>229 € per night<br>incl. taxes & fees</span></p>
+      </div>
+    </div>
+
+    <div class="accommodation-card">
+      <img src="seychelles.jpg" alt="Seychelles apartment" />
+      <div class="accommodation-details">
+
+        <div class="rating-container">
+  <span class="rating high">9.8</span>
+  <span class="rating-text">Exceptional</span>
+  <span class="reviews">(71 reviews)</span>
+</div>
+
+        <h3>Seychelles: Apartment - Seychelles</h3>
+        <p class="location">Mahé Island</p>
+        <p class="price">362 € <span>90 € per night<br>incl. taxes & fees</span></p>
+      </div>
+    </div>
+
+    <div class="accommodation-card">
+      <img src="sand-condo.jpg" alt="Ocean front condo" />
+      <div class="accommodation-details">
+
+        <div class="rating-container">
+  <span class="rating high">9.6</span>
+  <span class="rating-text">Exceptional</span>
+  <span class="reviews">(125 reviews)</span>
+</div>
+
+        <h3>Ocean Front Condo on the Sand with Ocean View</h3>
+        <p class="location">San Diego, CA</p>
+        <p class="price">1.893 € <span>473 € per night<br>incl. taxes & fees</span></p>
+      </div>
+    </div>
+
+    <div class="accommodation-card">
+      <img src="sunset-terrace.jpg" alt="Steps from the ocean" />
+      <div class="accommodation-details">
+        <div class="rating-container">
+  <span class="rating high">9.4</span>
+  <span class="rating-text">Exceptional</span>
+  <span class="reviews">(111 reviews)</span>
+</div>
+
+        <h3>Steps from the Ocean - Large Rooftop Terrace - Amazing Sunset</h3>
+        <p class="location">San Diego, CA</p>
+        <p class="price">3.806 € <span>952 € per night<br>incl. taxes & fees</span></p>
+      </div>
+    </div>
+  </div>
+
+
+  
+<section class="accommodation-banner">
+  <div class="banner-text">
+    <h2>Find private accommodations that suit you</h2>
+    <p>You want to take everyone from grandma to baby with you? Even your furry friends? Discover vacation rentals that suit your needs.</p>
+  </div>
+
+  <div class="banner-cards">
+    <div class="card">
+      <span>Close to the beach</span>
+    </div>
+    <div class="card">
+      <span>Pets welcome</span>
+    </div>
+    <div class="card">
+      <span>Pools</span>
+    </div>
+    <div class="card">
+      <span>More than three bedrooms</span>
+    </div>
+  </div>
+</section>
+
+
+
+</section>
+
   </body>
 </html>
+
